<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>

    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="category_overview">Overview</string>
    <string name="product_example_name">Product Example</string>

    <string name="category_quantity">Quantity</string>
    <string name="category_add_remove">Add / Remove</string>
    <string name="category_price">Price</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_quantity">Quantity:</string>
    <string name="hint_product_price">Price:</string>

    <string name="currency_symbol">€</string>
    <string name="unit_product_quantity">pc</string>

    <string name="product_image">Product Image</string>
    <string name="insert_image_failed">Error about adding product\'s image</string>

    <string name="supplier">Order</string>
    <string name="action_order_more">Order more</string>
    <string name="buy_button">BUY</string>

    <string name="supplier_name_edit">Supplier Name</string>
    <string name="supplier_email_edit">Supplier Email</string>
    <string name="supplier_name_dummy">Supplier Example Name</string>
    <string name="supplier_email_dummy">supplier@gmail.com</string>


</resources>
