<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <!-- Units for quantity (kg) -->
                <TextView
                    android:id="@+id/label_quantity_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_quantity" />

            </RelativeLayout>

        </LinearLayout>


        <!-- Price category -->
        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />

                <!-- Units for amount -->
                <TextView
                    android:id="@+id/label_currency_symbol"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/currency_symbol" />

            </RelativeLayout>


        </LinearLayout>


        <!-- Image section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Photo -->
                <ImageView
                    android:id="@+id/edit_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:maxHeight="256dp"
                    android:minHeight="128dp"
                    android:paddingLeft="4dp"
                    android:scaleType="centerInside"
                    tools:background="@drawable/sample" />

                <TextView
                    android:id="@+id/add_or_edit_photo_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="italic"
                    tools:text="Tap to add a photo" />


            </LinearLayout>


        </LinearLayout>


        <!-- Add / Remove -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_add_remove" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- add Buttons -->
                <Button
                    android:id="@+id/addProductButton"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="add"
                    android:text="ADD" />

                <!-- remove Buttons -->
                <Button
                    android:id="@+id/removeProductButton"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="remove"
                    android:text="REMOVE" />

            </RelativeLayout>


        </LinearLayout>


        <!-- Supplier Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label Supplier -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/supplier_name_edit"
                    android:inputType="textCapWords" />

                <!-- E-mail field -->
                <EditText
                    android:id="@+id/edit_supplier_email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/supplier_email_edit"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>