<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="nome_prodotto"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quantity_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_product_quantity" />

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/quantity_desc"
                android:layout_toRightOf="@+id/quantity_desc"
                android:hint="30 pc" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/price_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_product_price" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/price_desc"
                android:layout_toRightOf="@+id/price_desc"
                android:hint="199.90 €" />

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/buy_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/buy_button" />

</LinearLayout>